--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -360,8 +360,17 @@ ga('create',  window.gaAccount, 'auto');
 <!-- Web Analytic -->
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalytics.module.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalyticsEditConfig.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/edge-cache-hit-miss-ratio/widgetEdgeCacheHitMissRatio.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/edge-cache-hit-miss-ratio/widgetEdgeCacheHitMissRatio.config.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/ftb-average/widgetFTBAverage.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/ftb-average/widgetFTBAverage.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-graph/widgetHTTPStatusCodeLineGraph.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-graph/widgetHTTPStatusCodeLineGraph.config.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-https-request-ratio/widgetHTTPHTTPSRequestsRatio.config.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-https-request-ratio/widgetHTTPHTTPSRequestsRatio.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-ratio/widgetHTTPStatusCodesRatio.config.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-ratio/widgetHTTPStatusCodesRatio.controller.js"></script>
+
 <!-- //Web Analytic -->
 <!-- BlueTriangleTech -->
 <script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.module.js"></script>
