Add domain version comparison

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -132,6 +132,7 @@
 
 <script type="text/javascript" src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
 
+<script type="text/javascript" src="bower_components/angular-object-diff/dist/angular-object-diff.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
 <!-- endbuild -->
