--- a/code/dev/parts/domains/versions.html
+++ b/code/dev/parts/domains/versions.html
@@ -1,67 +1,68 @@
 <div class="row">
-    <div class="col-sm-12">
-      <h2 class="pull-left page-title">
+  <div class="col-sm-12">
+    <h2 class="pull-left page-title">
         Domain versions: <strong ng-if="domain">{{domain.domain_name}}</strong>
       </h2>
-    </div>
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="pull-left">
+              <a ui-sref="index.webApp.domains" ng-disabled="_loading" class="btn btn-default">
+                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel-body">
+        <alert type="danger" ng-if="!id">Please select domain</alert>
+        <form class="form-horizontal" ng-show="id">
+          <div class="form-group">
             <div class="col-md-12">
-              <div class="pull-left">
-                <a ui-sref="index.webApp.domains"
-                   ng-disabled="_loading"
-                   class="btn btn-default">
-                  <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                  Back To List
+              <div class="col-md-6">
+                <select name="versions" id="versions" class="form-control" ng-disabled="_loading" ng-model="currentVersion" ng-change="onChangeVersion()" ng-options="ver.last_published_domain_version as format(ver) for ver in versions">
+                  <option value="">Please Select Domain Configuration Version</option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <select name="compareVersions" id="compareVersions" class="form-control" ng-disabled="_loading" ng-model="compareVersion" ngchange="onChangeCompareVersion()" ng-options="ver.last_published_domain_version as format(ver) for ver in versions " ng-disabled="currentVersion==null || currentVersion==''">
+                  <option value="">Please Select Domain Configuration Version For Compare</option>
+                </select>
+                <button ng-disabled="compareVersion=='' || compareVersion==null" class="btn btn-primary btn-sm" ng-click="onChangeCompareVersion()"> Compare </button>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-12">
+              <div class="row ng-cloack">
+                <div class="col-md-12" ng-class="dataCompare? 'col-md-6': 'col-md-12'">
+                  <pre class="col-md-12" hljs hljs-source="obj.data"></pre>
+                </div>
+                <div class="col-md-6" ng-if="!!dataCompare">
+                  <pre class="col-md-12" ng-bind-html="dataCompare"></pre>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label> NOTE: </label>
+                      <del class="diff diff-key"> value in Version {{currentVersion}} </del>
+                      <ins class="diff diff-key"> value in Version {{compareVersion}} </ins>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12" style="margin-top: 15px">
+                <a ui-sref="index.webApp.domains" ng-disabled="_loading" class="btn btn-default">
+                  <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
                 </a>
               </div>
             </div>
           </div>
-        </div>
-        <div class="panel-body">
-          <alert type="danger" ng-if="!id">Please select domain</alert>
-
-          <form class="form-horizontal" ng-show="id">
-
-            <div class="form-group">
-
-              <div class="col-md-12">
-                <select name="versions"
-                        id="versions"
-                        class="form-control"
-                        ng-disabled="_loading"
-                        ng-model="currentVersion"
-                        ng-change="onChangeVersion()"
-                        ng-options="ver.last_published_domain_version as format(ver) for ver in versions">
-                  <option value="">Please Select Domain Configuration Version</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-md-12">
-                <pre class="col-md-12"
-                hljs
-                hljs-source = "obj.data"></pre>
-
-                <div class="col-sm-12" style="margin-top: 15px">
-                  <a ui-sref="index.webApp.domains"
-                     ng-disabled="_loading"
-                     class="btn btn-default">
-                    <i class="glyphicon glyphicon-remove"></i>&nbsp;
-                    Cancel
-                  </a>
-                </div>
-              </div>
-            </div>
-
-          </form>
-        </div>
+        </form>
       </div>
     </div>
+  </div>
 </div>
-
