--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -1,34 +1,10 @@
 <h3 style="margin-top: 0;">{{ heading }}</h3>
-
 <div class="clearfix" style="margin-bottom: 8px;">
   <div class="pull-right">
-
-         <!-- ng-hide="!ngDomain" -->
-    <div mobile-traffic-filters
-         fl-oses="flOses"
-         fl-countries="flCountries"
-         fl-devices="flDevices"
-         fl-operators="flOperators"
-         fl-networks="flNetworks"
-         fl-disabled="flDisabled"
-         ng-filters="filters"
-         on-filter="reload()"></div>
-
+    <!-- ng-hide="!ngDomain" -->
+    <div mobile-traffic-filters fl-oses="flOses" fl-countries="flCountries" fl-devices="flDevices" fl-operators="flOperators" fl-networks="flNetworks" fl-disabled="flDisabled" ng-filters="filters" on-filter="reload()"></div>
   </div>
 </div>
-
-<!-- <div class="alert alert-info" ng-if="_loading">
-  <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
-</div> -->
-
-<div>
-<!--   <div class="alert alert-info" ng-if="!_loading && !hits.labels.length">
-    No data to display
-  </div> -->
-
-  <div style="min-width: 500px; min-height: 400px" ><!--  ng-class="{'invisible-chart-wrapper': hits.labels && _loading, 'hide': !_loading &&(!hits.labels || !hits.labels.length) }"> -->
-    <div ng-if="!_loading" line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
-  </div>
+<div style="min-width: 500px; min-height: 400px">
+  <div line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
 </div>
-
