--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -117,7 +117,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.ignore_all == true">Remove Ignored Cookies from Edge Responses</label>
+      <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.ignore_all == true">Remove Ignored Cookies From Edge Responses</label>
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.ignore_all == false" ng-switch="$ctrl.rule.cookies.list_is_keep">
         Remove <span ng-switch-when="false">Ignored</span><span ng-switch-when="true">Kept</span> Cookies from Edge Responses</label>
       <div class="col-sm-9">
