Add “Publishing Status “ in Edit Domain Page

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -384,6 +384,10 @@
               </div>
             </div>
           </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">Current Publishing Status</label>
+            <div class="col-md-9 control-label" style="text-align:left" interval="DOMAIN_STATUS_REFRESH_INTERVAL_EDIT_FORM" domain-staging-status ng-id="modelInfo.status_domain_id"></div>
+          </div>
           <div class="form-group ">
             <div class="col-sm-offset-2 col-sm-10">
               <a ui-sref="^" class="btn btn-default">
