--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -141,10 +141,10 @@
       </toggle-switch>
     </div>
   </div>
-  <div class="form-group form-inline"  ng-class="{'has-error': editForm.browserCachingNewTTL.$invalid && editForm.browserCachingNewTTL.$dirty}" ng-show="$ctrl.rule.browser_caching.override_edge">
-    <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines for now long objects will be cached in browser cache (range 0-10,000,000 seconds)">Browser Caching TTL, seconds</label>
+  <div class="form-group form-inline" ng-class="{'has-error': editForm.browserCachingNewTTL.$invalid && editForm.browserCachingNewTTL.$dirty}" ng-show="$ctrl.rule.browser_caching.override_edge">
+    <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Defines for now long objects will be cached in browser cache (range 0-10,000,000 seconds)">Browser Caching TTL</label>
     <div class="col-md-9">
-      <input type="number" class="form-control"name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl" ng-min="0" ng-max="10000000" required>
+      <input type="number" class="form-control" name="browserCachingNewTTL" ng-model="$ctrl.rule.browser_caching.new_ttl" ng-min="0" ng-max="10000000" required> second(s)
       <div class="error-messages" ng-messages="editForm.browserCachingNewTTL.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
@@ -157,6 +157,38 @@
     <div class="col-md-9">
       <toggle-switch ng-model="$ctrl.rule.browser_caching.force_revalidate" on-label="On" off-label="Off">
       </toggle-switch>
+    </div>
+  </div>
+  <hr>
+  <!-- Serving of Stale Content -->
+  <div class="form-group">
+    <label class="col-sm-3 ">Serving of Stale Content</label>
+  </div>
+  <div class="form-group form-inline">
+    <label for="override_origin" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Define whether the edge proxy will serve end users with expired objects in case of origin slowness or downtime">
+      Enable The Serving of Stale Content
+    </label>
+    <div class="col-md-9">
+      <toggle-switch ng-model="$ctrl.rule.serve_stale.enable" on-label="On" off-label="Off">
+      </toggle-switch>
+    </div>
+  </div>
+  <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleWhileFetchingTTL.$invalid && editForm.serveStaleWhileFetchingTTL.$dirty}" ng-show="$ctrl.rule.serve_stale.enable">
+    <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users while fetching new objects from the origin server (range 0-10,000,000)">Stale Object TTL While Fetching New Object</label>
+    <div class="col-md-9">
+      <input type="number" class="form-control" name="serveStaleWhileFetchingTTL" ng-model="$ctrl.rule.serve_stale.while_fetching_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <div class="error-messages" ng-messages="editForm.serveStaleWhileFetchingTTL.$error" role="alert" ng-messages-multiple>
+        <div ng-messages-include="parts/shared/error-messages.html"></div>
+      </div>
+    </div>
+  </div>
+  <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleOriginSickTTL.$invalid && editForm.serveStaleOriginSickTTL.$dirty}" ng-show="$ctrl.rule.serve_stale.enable">
+    <label class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users if origin server is down as detected by the origin health monitoring probe (range 0-10,000,000)">Stale Object TTL When Origin Is Down</label>
+    <div class="col-md-9">
+      <input type="number" class="form-control" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <div class="error-messages" ng-messages="editForm.serveStaleOriginSickTTL.$error" role="alert" ng-messages-multiple>
+        <div ng-messages-include="parts/shared/error-messages.html"></div>
+      </div>
     </div>
   </div>
   <hr>
