Create new directive  'cache-environment-drop-down-menu'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -274,6 +274,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/cache/cache.module.js"></script>
 <script type="text/javascript" src="js/portal/cache/cache.routes.js"></script>
 <script type="text/javascript" src="js/portal/cache/controller/cachePurge.controller.js"></script>
+<script type="text/javascript" src="js/portal/cache/cache-environment-drop-down-menu/cache-environment-drop-down-menu.compoment.js"></script>
 
 <script type="text/javascript" src="js/portal/import-config/importConfig.module.js"></script>
 <script type="text/javascript" src="js/portal/import-config/importConfig.routes.js"></script>
