--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -29,22 +29,23 @@
         <!-- Display data in Advanced Mode-->
         <div class="form-horizontal" ng-show="isAdvancedMode">
           <div name="json" class="col-md-12 domains-advanced-mode-edit" id="json" ng-model="modelAdvance" options="jsoneditor.options" ng-jsoneditor="jsonEditorEvent" style="height: 550px; padding-left: 0;"></div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label" style="margin-top: 15px;">Current Publishing Status</label>
+            <div class="col-md-9 control-label" style="text-align:left;margin-top: 15px;" interval="DOMAIN_STATUS_REFRESH_INTERVAL_EDIT_FORM" domain-staging-status ng-id="modelInfo.status_domain_id"></div>
+          </div>
           <div class="form-group ">
-            <div class="col-sm-offset-2 col-sm-10" style="margin-top: 15px;">
+            <div class="col-sm-offset-2 col-sm-10">
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
               <button class="btn btn-info" ng-disabled="_loading || jsonIsInvalid" ng-click="validateDomain(modelAdvance)">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-check" ng-if="!_loading"></i>&nbsp; Verify
+                <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-check'"></i>&nbsp; Verify
               </button>
               <button class="btn btn-success" ng-disabled="_loading || jsonIsInvalid" ng-click="updateDomain(modelAdvance)">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-file" ng-if="!_loading"></i>&nbsp; Update
+                <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-file'"></i>&nbsp; Update
               </button>
               <button class="btn btn-success" ng-disabled="_loading || jsonIsInvalid" ng-click="publishDomain(modelAdvance)">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Publish
+                <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp; Publish
               </button>
             </div>
           </div>
