Fix left padding for “x” (global search)

--- a/code/dev/parts/shared/search/search.html
+++ b/code/dev/parts/shared/search/search.html
@@ -9,4 +9,4 @@
         typeahead-on-select="searchItemSelected($item)",
         uib-typeahead="item as item.searchBarText for item in getFilteredList($viewValue)"/>
 </div>
-<i class="glyphicon glyphicon-remove" style="vertical-align: super;" ng-show="showClear()" ng-click="clearSearchBar()"></i>
+<i class="glyphicon glyphicon-remove" style="vertical-align: super;margin-left: 10px;" ng-show="showClear()" ng-click="clearSearchBar()"></i>
