--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -6,7 +6,6 @@
       </h2>
     </div>
   </div>
-
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
@@ -14,11 +13,8 @@
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
-                <a ng-disabled="_loading"
-                   ui-sref="index.accountSettings.users"
-                   class="btn btn-default">
-                  <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                  Back
+                <a ng-disabled="_loading" ui-sref="index.accountSettings.users" class="btn btn-default">
+                  <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back
                 </a>
               </div>
             </div>
@@ -26,87 +22,54 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="_loading">
-            <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>&nbsp;
-            Loading...
+            <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>&nbsp; Loading...
           </div>
-
           <form class="form-horizontal" name="editForm" ng-submit="updateProfile(user);editForm.$setPristine();" novalidate>
             <div class="row">
-                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4">
-                    <div class="form-group"  ng-class="{'has-error': editForm.current_password.$invalid && editForm.current_password.$dirty}">
-                        <label for="current_password" class="control-label">Current Password</label>
-                        <input type="password"
-                               class="form-control"
-                               name="current_password"
-                               ng-minlength="8"
-                               ng-maxlength="15"
-                               ng-disabled="_loading"
-                               ng-model="pass.current_password"
-                               id="current_password"
-                               autocomplete="off"
-                               autofocus required>
-                        <div class="error-messages" ng-messages="editForm.current_password.$error" role="alert" ng-messages-multiple>
-                            <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
-                            <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
-                            <div ng-messages-include="parts/shared/error-messages.html"></div>
-                        </div>
-                    </div>
-                    <div class="form-group" ng-class="{'has-error': editForm.new_password.$invalid && editForm.new_password.$dirty}">
-                        <label for="new_password" class="control-label">New Password</label>
-                        <input type="password"
-                               class="form-control"
-                               name="new_password"
-                               ng-minlength="8"
-                               ng-maxlength="15"
-                               ng-disabled="_loading"
-                               ng-model="pass.new_password"
-                               autocomplete="off"
-                               id="new_password" required>
-                        <div class="error-messages" ng-messages="editForm.new_password.$error" role="alert" ng-messages-multiple>
-                            <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
-                            <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
-                            <div ng-messages-include="parts/shared/error-messages.html"></div>
-                        </div>
-                    </div>
-                    <div class="form-group" ng-class="{'has-error': editForm.confirm_password.$invalid && editForm.confirm_password.$dirty}">
-                        <label for="confirm_password" class="control-label">Confirm New Password</label>
-                        <input type="password"
-                               class="form-control"
-                               name="confirm_password"
-                               validate-compare-to="pass.new_password"
-                               ng-disabled="_loading"
-                               ng-model="pass.confirm_password"
-                               autocomplete="off"
-                               id="confirm_password">
-                        <div class="error-messages" ng-messages="editForm.confirm_password.$error" role="alert" ng-messages-multiple>
-                            <div ng-message="pattern">The new and confirmation passwords do not match</div>
-                            <div ng-messages-include="parts/shared/error-messages.html"></div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="text-center">
-
-                            <a ng-disabled="_loading"
-                               ui-sref="index.accountSettings.users"
-                               class="btn btn-default">
-                                <i class="glyphicon glyphicon-remove"></i>&nbsp;
-                                Cancel
-                            </a>
-
-                            <button class="btn btn-success" ng-disabled="_loading || editForm.$invalid">
-                                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                                <i class="glyphicon glyphicon-ok"></i>&nbsp;
-                                Update Password
-                            </button>
-                        </div>
-                    </div>
-
+              <div class="form-group" ng-class="{'has-error': editForm.current_password.$invalid && editForm.current_password.$dirty}">
+                <label for="current_password" class="col-md-2 control-label">Current Password *</label>
+                <div class="col-md-10">
+                  <input type="password" class="form-control" name="current_password" ng-minlength="8" ng-maxlength="15" ng-disabled="_loading" ng-model="pass.current_password" id="current_password" autocomplete="off" autofocus required>
+                  <div class="error-messages" ng-messages="editForm.current_password.$error" role="alert" ng-messages-multiple>
+                    <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
+                    <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
+                    <div ng-messages-include="parts/shared/error-messages.html"></div>
+                  </div>
                 </div>
+              </div>
+              <div class="form-group" ng-class="{'has-error': editForm.new_password.$invalid && editForm.new_password.$dirty}">
+                <label for="new_password" class="control-label col-md-2">New Password *</label>
+                <div class="col-md-10">
+                  <input type="password" class="form-control" name="new_password" ng-minlength="8" ng-maxlength="15" ng-disabled="_loading" ng-model="pass.new_password" autocomplete="off" id="new_password" required>
+                  <div class="error-messages" ng-messages="editForm.new_password.$error" role="alert" ng-messages-multiple>
+                    <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
+                    <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
+                    <div ng-messages-include="parts/shared/error-messages.html"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group" ng-class="{'has-error': editForm.confirm_password.$invalid && editForm.confirm_password.$dirty}">
+                <label for="confirm_password" class="control-label col-md-2">Confirm New Password *</label>
+                <div class="col-md-10">
+                  <input type="password" class="form-control" name="confirm_password" validate-compare-to="pass.new_password" ng-disabled="_loading" ng-model="pass.confirm_password" autocomplete="off" id="confirm_password">
+                  <div class="error-messages" ng-messages="editForm.confirm_password.$error" role="alert" ng-messages-multiple>
+                    <div ng-message="pattern">The new and confirmation passwords do not match</div>
+                    <div ng-messages-include="parts/shared/error-messages.html"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <a ng-disabled="_loading" ui-sref="index.accountSettings.users" class="btn btn-default">
+                    <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
+                  </a>
+                  <button class="btn btn-success" ng-disabled="_loading || editForm.$invalid">
+                    <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin': 'glyphicon-ok'"></i>&nbsp; Update Password
+                  </button>
+                </div>
+              </div>
             </div>
-
           </form>
-
         </div>
       </div>
     </div>
