web analytics, proxy traffic, browser name filtering added

--- a/code/dev/parts/reports/charts/proxy-traffic.html
+++ b/code/dev/parts/reports/charts/proxy-traffic.html
@@ -4,6 +4,7 @@
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
+     fl-browser="flBrowser"
      ng-filters="filters"
      on-filter="reloadTrafficStats()"></div>
 <!-- <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
