--- a/code/dev/parts/reports/charts/hits-cache.html
+++ b/code/dev/parts/reports/charts/hits-cache.html
@@ -5,6 +5,7 @@
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
+     fl-browser="flBrowser"
      ng-filters="filters"
      on-filter="reload()"></div>
 <!-- <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
