--- a/code/dev/parts/reports/filters/time-period.html
+++ b/code/dev/parts/reports/filters/time-period.html
@@ -35,6 +35,14 @@
       </div>
 
       <div class="form-group">
+        <select class="form-control fixed"
+                ng-model="ngFilters.browser"
+                ng-options="item for item in flBrowser">
+          <option value="">All Browsers</option>
+        </select>
+      </div>
+
+      <div class="form-group">
         <button class="btn btn-info" ng-click="updateFilters()">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
           Update Report
