--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -39,6 +39,7 @@
               <div requests-chart
                    fl-os="os.labels"
                    fl-device="device.labels"
+                   fl-browser="browser.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
@@ -47,6 +48,7 @@
                    status-codes="statusCode.labels"
                    fl-os="os.labels"
                    fl-device="device.labels"
+                   fl-browser="browser.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
@@ -57,6 +59,7 @@
               <div http-https-chart
                    fl-os="os.labels"
                    fl-device="device.labels"
+                   fl-browser="browser.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
@@ -65,6 +68,7 @@
                    status-codes="statusCode.labels"
                    fl-os="os.labels"
                    fl-device="device.labels"
+                   fl-browser="browser.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
@@ -76,6 +80,7 @@
                    status-codes="statusCode.labels"
                    fl-os="os.labels"
                    fl-device="device.labels"
+                   fl-browser="browser.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
@@ -83,6 +88,7 @@
               <div hits-cache-chart
                    fl-os="os.labels"
                    fl-device="device.labels"
+                   fl-browser="browser.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
