--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -40,16 +40,15 @@
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-browser="browser.labels"
-                   fl-country="countries"
+                   fl-country="country"
                    ng-domain="domain"></div>
             </div>
             <div class="col-lg-6">
               <div proxy-traffic-chart
-                   status-codes="statusCode.labels"
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-browser="browser.labels"
-                   fl-country="countries"
+                   fl-country="country"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -60,16 +59,16 @@
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-browser="browser.labels"
-                   fl-country="countries"
+                   fl-country="country"
                    ng-domain="domain"></div>
             </div>
             <div class="col-lg-6">
               <div http-status-code-chart
-                   status-codes="statusCode.labels"
                    fl-os="os.labels"
+                   status-codes="statusCode.labels"
                    fl-device="device.labels"
                    fl-browser="browser.labels"
-                   fl-country="countries"
+                   fl-country="country"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -77,11 +76,10 @@
           <div class="row">
             <div class="col-lg-6">
               <div request-status-chart
-                   status-codes="statusCode.labels"
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-browser="browser.labels"
-                   fl-country="countries"
+                   fl-country="country"
                    ng-domain="domain"></div>
             </div>
             <div class="col-lg-6">
@@ -89,7 +87,7 @@
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-browser="browser.labels"
-                   fl-country="countries"
+                   fl-country="country"
                    ng-domain="domain"></div>
             </div>
           </div>
