--- a/code/dev/parts/reports/fbt.html
+++ b/code/dev/parts/reports/fbt.html
@@ -29,9 +29,10 @@
           <div class="row">
             <div class="col-lg-12">
               <div fbt-average-chart
-                   fl-os="oses"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
@@ -40,9 +41,10 @@
           <div class="row">
             <div class="col-lg-12">
               <div fbt-distribution-chart
-                   fl-os="oses"
-                   fl-device="devices"
-                   fl-country="countries"
+                   fl-os="os"
+                   fl-device="device"
+                   fl-country="country"
+                   fl-browser="browser"
                    ng-domain="domain"></div>
             </div>
           </div>
