--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -158,6 +158,14 @@
           <hr>
 
           <div class="row">
+
+            <div class="col-md-6">
+              <h3>Top 10 Browsers</h3>
+              <div>
+                <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="browser"></div>
+              </div>
+            </div>
+
             <div class="col-md-6">
               <h3>QUIC/Non-QUIC Ratio</h3>
 
@@ -168,6 +176,10 @@
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="quic"></div>
               </div>
             </div>
+          </div>
+          <hr>
+
+          <div class="row">
             <div class="col-md-6">
               <h3>H2/H2C/Non-HTTP2 Ratio</h3>
 
@@ -178,10 +190,6 @@
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="http2"></div>
               </div>
             </div>
-          </div>
-          <hr>
-
-          <div class="row">
             <div class="col-md-6">
               <h3>Request Completion Success/Failure Ratio</h3>
 
