web analytics, top reports, slowest fbt report, some glitches removed

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -310,6 +310,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/reports/top/topReferer.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top5xx.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topFailed.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/top/slowestFBT.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/reportsProxyTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topReportsTraffic.controller.js"></script>
