--- a/code/dev/parts/reports/top/slowest-fbt.html
+++ b/code/dev/parts/reports/top/slowest-fbt.html
@@ -1,4 +1,4 @@
-<h3>Top Objects With Unsuccessful Completion Status</h3>
+<h3>Slowest FBT Objects</h3>
 <div filter-top-objects
      ng-disabled="!ngDomain"
      fl-os="flOs"
@@ -20,7 +20,7 @@
       <thead>
       <tr>
         <th>Path</th>
-        <th style="width: 10%;">Requests</th>
+        <th style="width: 28%;text-align:right">FBT(ms) Average(Min,Max,Count)</th>
       </tr>
       </thead>
       <tbody>
@@ -28,7 +28,8 @@
         <td>
           <a target="_blank" ng-href="http://{{ngDomain.domain_name}}{{item.path}}">{{item.path}}</a>
         </td>
-        <td class="text-right">{{item.count}}</td>
+        <td class="text-right"><strong>{{item.fbt_avg}}</strong> ({{item.fbt_min}},{{item.fbt_max}},{{item.count}})</td>
+
       </tr>
       </tbody>
     </table>
