web analytics, minor improvements

--- a/code/dev/parts/reports/top/slowest-fbt.html
+++ b/code/dev/parts/reports/top/slowest-fbt.html
@@ -1,4 +1,4 @@
-<h3>Objects Wwith Slowest FBT</h3>
+<h3>Objects With Slowest FBT</h3>
 <div filter-top-objects
      ng-disabled="!ngDomain"
      fl-os="flOs"
