--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -8,6 +8,7 @@
                 ng-model="delay">
           <option value="1">Last 1 Day</option>
           <option value="7">Last 7 Days</option>
+          <option value="30">Last 30 Days</option>
         </select>
       </div>
 
@@ -54,14 +55,6 @@
   </div>
 
 </div>
-
-<!-- <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
-  No data to display
-</div>
-<div class="alert alert-info" ng-if="_loading">
-  <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
-</div> -->
-<div><!--  ng-hide="!traffic.labels || !traffic.labels.length"> -->
+<div>
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="chartOptions"></div>
 </div>
