--- a/code/dev/parts/reports/fbt.html
+++ b/code/dev/parts/reports/fbt.html
@@ -41,10 +41,10 @@
           <div class="row">
             <div class="col-lg-12">
               <div fbt-distribution-chart
-                   fl-os="os"
-                   fl-device="device"
-                   fl-country="country"
-                   fl-browser="browser"
+                   fl-os="os24"
+                   fl-device="device24"
+                   fl-country="country24"
+                   fl-browser="browser24"
                    ng-domain="domain"></div>
             </div>
           </div>
